added template notebooks for scanpy run

--- a/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
@@ -36,6 +36,7 @@
     "    * [Neighborhood graph](#Neighborhood-graph)\n",
     "      * [Clustering the neighborhood graph](#Clustering-the-neighborhood-graph)\n",
     "      * [Embed the neighborhood graph using UMAP](#Embed-the-neighborhood-graph-using-UMAP)\n",
+    "        * [Plotting 3D UMAP](#Plotting-3D-UMAP)\n",
     "        * [Plotting 2D UMAP](#Plotting-2D-UMAP)\n",
     "      * [Embed the neighborhood graph using tSNE](#Embed-the-neighborhood-graph-using-tSNE)\n",
     "    * [Finding marker genes](#Finding-marker-genes)\n",
@@ -116,23 +117,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "## DELETE ME\n",
-    "rm -rf cache\n",
-    "rm -rf /tmp/data\n",
-    "mkdir -p /tmp/data\n",
-    "wget -q -O /tmp/data/pbmc3k_filtered_gene_bc_matrices.tar.gz \\\n",
-    "  /tmp/data http://cf.10xgenomics.com/samples/cell-exp/1.1.0/pbmc3k/pbmc3k_filtered_gene_bc_matrices.tar.gz\n",
-    "cd /tmp/data\n",
-    "tar -xzf pbmc3k_filtered_gene_bc_matrices.tar.gz"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -156,7 +140,7 @@
    "source": [
     "adata = \\\n",
     "  sc.read_10x_mtx(\n",
-    "    '/tmp/data/filtered_gene_bc_matrices/hg19/',\n",
+    "    '{{ CELLRANGER_PATH }}',\n",
     "    var_names='gene_symbols',\n",
     "    cache=True)"
    ]
@@ -929,7 +913,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scanpy documentation suggests embedding the graph in 2 dimensions using UMAP (McInnes et al., 2018), see below. It is potentially more faithful to the global connectivity of the manifold than tSNE, i.e., it better preservers trajectories.\n"
+    "Scanpy documentation suggests embedding the graph in 2 dimensions using UMAP (McInnes et al., 2018), see below. It is potentially more faithful to the global connectivity of the manifold than tSNE, i.e., it better preservers trajectories.\n",
+    "\n",
+    "We are computing a 3D UMAP for a 3D plot then overwriting it with a 2 dimension UMAP."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
+    "\n",
+    "##### Plotting 3D UMAP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_map = { \n",
+    "        '0':'#4682B4',\n",
+    "        '1':'#A233A2',\n",
+    "        '2':'#FF7F50',\n",
+    "        '3':'#6787E7',\n",
+    "        '4':'#B75555',\n",
+    "        '5':'#2E8B57',\n",
+    "        '6':'#191970',\n",
+    "        '7':'#DB7093',\n",
+    "        '8':'#90EE90',\n",
+    "        '9':'#00FFFF',\n",
+    "        '10':'#FFD700',\n",
+    "        '11':'#DC143C',\n",
+    "        '12':'#B0C4DE',\n",
+    "        '13':'#00FA9A',\n",
+    "        '14':'#FA8072',\n",
+    "        '15':'#FFF0F5',\n",
+    "        '16':'#DB7093'\n",
+    "      }\n",
+    "leiden_series = deepcopy(adata.obs['leiden'])\n",
+    "color_map = leiden_series.map(dict_map).values\n",
+    "labels = list(adata.obs.index)\n",
+    "## plotting 3D UMAP\n",
+    "sc.tl.umap(\n",
+    "  adata,\n",
+    "  n_components=3)\n",
+    "hovertext = \\\n",
+    "  ['cluster: {0}, barcode: {1}'.\\\n",
+    "     format(\n",
+    "       grp,labels[index])\n",
+    "         for index,grp in enumerate(leiden_series.values)]\n",
+    "iplot(\n",
+    "  [go.Scatter3d(\n",
+    "     x=adata.obsm['X_umap'][:, 0],\n",
+    "     y=adata.obsm['X_umap'][:, 1],\n",
+    "     z=adata.obsm['X_umap'][:, 2], \n",
+    "     mode='markers',\n",
+    "     marker=dict(color=color_map,\n",
+    "                 size=5),\n",
+    "     opacity=0.6,\n",
+    "     text=labels,\n",
+    "     hovertext=hovertext,\n",
+    "  )],)"
    ]
   },
   {
