updated examples and templates

--- a/examples/Clustering_3K_PBMCs.ipynb
+++ b/examples/Clustering_3K_PBMCs.ipynb
@@ -197,6 +197,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Scanpy stores the count data is an annotated data matrix ($observations$ e.g. cell barcodes × $variables$ e.g gene names) called [AnnData](https://anndata.readthedocs.io) together with annotations of observations($obs$), variables ($var$) and unstructured annotations ($uns$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
     "## Data processing and visualization"
@@ -656,18 +663,6 @@
     "max_counts_threshold = 40000\n",
     "min_gene_counts_threshold = 700\n",
     "max_mito_pct_threshold = 0.2\n",
-    "\n",
-    "if adata[adata.obs['n_counts'] > min_counts_threshold].n_obs < 1000:\n",
-    "    min_counts_threshold = 1000\n",
-    "\n",
-    "if adata[adata.obs['n_counts'] < max_counts_threshold].n_obs < 1000:\n",
-    "    max_counts_threshold = 50000\n",
-    "    \n",
-    "if adata[adata.obs['n_genes'] > min_gene_counts_threshold].n_obs < 1000:\n",
-    "    min_gene_counts_threshold = 400\n",
-    "    \n",
-    "if adata[adata.obs['percent_mito'] < max_mito_pct_threshold].n_obs < 1000:\n",
-    "    max_mito_pct_threshold = 0.02\n",
     "\n",
     "sc.pp.filter_cells(adata, min_counts = min_counts_threshold)\n",
     "print('Number of cells after min count ({0}) filter: {1}'.format(min_counts_threshold,adata.n_obs))\n",
