--- a/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
@@ -11,12 +11,15 @@
     "* __Maintained by:__ `Imperial BRC Genomics Facility`\n",
     "* __Docker image:__ `imperialgenomicsfacility/scanpy-notebook-image:release-v0.0.1`\n",
     "* __Github repository:__ [imperial-genomics-facility/scanpy-notebook-image](https://github.com/imperial-genomics-facility/scanpy-notebook-image)\n",
-    "* __Created on:__ `2020-Jan-19 21:20`\n",
+    "* __Created on:__ {{ DATE_TAG }}\n",
     "* __Contact us:__ [Imperial BRC Genomics Facility](https://www.imperial.ac.uk/medicine/research-and-impact/facilities/genomics-facility/contact/)\n",
     "* __License:__ [Apache License 2.0](https://github.com/imperial-genomics-facility/scanpy-notebook-image/blob/master/LICENSE)\n",
+    "* __Project name:__ {{ PROJECT_IGF_ID }}\n",
+    "{% if SAMPLE_IGF_ID %}* __Sample name:__ {{ SAMPLE_IGF_ID }}{% endif %}\n",
     "\n",
     "## Table of contents\n",
     "  * [Introduction](#Introduction)\n",
+    "  * [Input parameters](#Input-parameters)\n",
     "  * [Loading required libraries](#Loading-required-libraries)\n",
     "  * [Reading data from Cellranger output](#Reading-data-from-Cellranger-output)\n",
     "  * [Data processing and visualization](#Data-processing-and-visualization)\n",
@@ -45,6 +48,7 @@
     "      * [Matrix plot of ranked genes](#Matrix-plot-of-ranked-genes)\n",
     "      * [Heatmap plot of ranked genes](#Heatmap-plot-of-ranked-genes)\n",
     "      * [Tracks plot of ranked genes](#Tracks-plot-of-ranked-genes)\n",
+    "    * [Saving scanpy output](#Saving-scanpy-output)\n",
     "  * [References](#References)\n",
     "  * [Acknowledgement](#Acknowledgement)"
    ]
@@ -64,6 +68,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Input parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cellranger_output = '{{ CELLRANGER_RESULTS }}'\n",
+    "output_h5ad = '{{ SCANPY_H5AD }}'\n",
+    "temp_dir_path = '/tmp'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
+    "\n",
     "## Loading required libraries"
    ]
   },
@@ -81,6 +105,7 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scanpy as sc\n",
@@ -91,22 +116,6 @@
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
     "sc.settings.verbosity = 0\n",
     "sc.logging.print_versions()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We are setting the output file path to $/tmp/scanpy\\_output.h5ad$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results_file = '/tmp/scanpy_output.h5ad'"
    ]
   },
   {
@@ -126,6 +135,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## checking the input file path\n",
+    "if not os.path.exists(cellranger_output):\n",
+    "  raise IOError(\"Cellranger input path {0} not found\".format(cellranger_output))\n",
+    "\n",
+    "## extract files if a tar.gz file is given\n",
+    "if cellranger_output.endswith('.tar.gz'):\n",
+    "  try:\n",
+    "    import tarfile\n",
+    "    file_list = list()\n",
+    "    with tarfile.open(cellranger_output,mode='r') as tar:\n",
+    "      for file_name in tar.getnames():\n",
+    "        tar.extract(file_name,path=temp_dir_path)\n",
+    "        file_list.append(os.path.join(temp_dir_path,file_name))\n",
+    "    if len(file_name)==0:\n",
+    "      raise ValueError(\"No extracted file found\")\n",
+    "    filtered_feature_bc_matrix = \\\n",
+    "    [f for f in file_list\n",
+    "         if '/filtered_feature_bc_matrix/' in f]\n",
+    "    if len(filtered_feature_bc_matrix)==0 or \\\n",
+    "       len(filtered_feature_bc_matrix)<3:\n",
+    "      raise ValueError(\n",
+    "              \"No or incomplete filtered barcode matrix file found in the tar, count:{0}\".\\\n",
+    "                format(len(filtered_feature_bc_matrix)))\n",
+    "    ## resetting cellranger_output path with the extracted file path\n",
+    "    cellranger_output = os.path.dirname(filtered_feature_bc_matrix[0])\n",
+    "\n",
+    "  except Exception as e:\n",
+    "    raise ValueError(\"Failed to extract tar file {0}, error: {1}\".format(cellranger_output,e))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -140,7 +185,7 @@
    "source": [
     "adata = \\\n",
     "  sc.read_10x_mtx(\n",
-    "    '{{ CELLRANGER_PATH }}',\n",
+    "    cellranger_output,\n",
     "    var_names='gene_symbols',\n",
     "    cache=True)"
    ]
@@ -175,6 +220,13 @@
    "outputs": [],
    "source": [
     "adata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scanpy stores the count data is an annotated data matrix ($observations$ e.g. cell barcodes × $variables$ e.g gene names) called [AnnData](https://anndata.readthedocs.io) together with annotations of observations($obs$), variables ($var$) and unstructured annotations ($uns$)"
    ]
   },
   {
@@ -634,24 +686,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Total number of cells: {0}'.format(adata.n_obs))\n",
-    "\n",
     "min_counts_threshold = 1500\n",
     "max_counts_threshold = 40000\n",
     "min_gene_counts_threshold = 700\n",
     "max_mito_pct_threshold = 0.2\n",
     "\n",
     "if adata[adata.obs['n_counts'] > min_counts_threshold].n_obs < 1000:\n",
-    "    min_counts_threshold = 1000\n",
+    "    min_counts_threshold = 100\n",
     "\n",
     "if adata[adata.obs['n_counts'] < max_counts_threshold].n_obs < 1000:\n",
     "    max_counts_threshold = 50000\n",
     "    \n",
     "if adata[adata.obs['n_genes'] > min_gene_counts_threshold].n_obs < 1000:\n",
-    "    min_gene_counts_threshold = 400\n",
+    "    min_gene_counts_threshold = 100\n",
     "    \n",
     "if adata[adata.obs['percent_mito'] < max_mito_pct_threshold].n_obs < 1000:\n",
-    "    max_mito_pct_threshold = 0.02\n",
+    "    max_mito_pct_threshold = 0.5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if min_counts_threshold != 1500 or min_gene_counts_threshold!= 700:\n",
+    "  print(\"Resetting the thresholds\")\n",
+    "  ax = sc.pl.scatter(adata, 'n_counts', 'n_genes', color='percent_mito',show=False)\n",
+    "  ax.set_title('Fraction mitochondrial counts', fontsize=12)\n",
+    "  ax.set_xlabel(\"Count depth\",fontsize=12)\n",
+    "  ax.set_ylabel(\"Number of genes\",fontsize=12)\n",
+    "  ax.tick_params(labelsize=12)\n",
+    "  ax.axhline(min_gene_counts_threshold, 0,1, color='red')\n",
+    "  ax.axvline(min_counts_threshold, 0,1, color='red')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Total number of cells: {0}'.format(adata.n_obs))\n",
+    "print('Filtering dataset using thresholds')\n",
     "\n",
     "sc.pp.filter_cells(adata, min_counts = min_counts_threshold)\n",
     "print('Number of cells after min count ({0}) filter: {1}'.format(min_counts_threshold,adata.n_obs))\n",
@@ -1209,6 +1286,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Saving scanpy output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.write(output_h5ad, compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
     "## References\n",
@@ -1220,11 +1313,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
-    "\n",
     "## Acknowledgement\n",
     "The Imperial BRC Genomics Facility is supported by NIHR funding to the Imperial Biomedical Research Centre."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
