changes to template for multiple inputs

--- a/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cellranger_output = '{{ CELLRANGER_RESULTS }}'\n",
+    "cellranger_output_list = '{{ CELLRANGER_RESULTS }}'\n",
     "output_h5ad = '{{ SCANPY_H5AD }}'\n",
     "temp_dir_path = '/tmp'"
    ]
@@ -145,6 +145,8 @@
     "  raise IOError(\"Cellranger input path {0} not found\".format(cellranger_output))\n",
     "\n",
     "## extract files if a tar.gz file is given\n",
+    "## get the first entry of the list\n",
+    "cellranger_output = cellranger_output_list[0]\n",
     "if cellranger_output.endswith('.tar.gz'):\n",
     "  try:\n",
     "    import tarfile\n",
