fix for passing a list

--- a/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cellranger_output_list = '{{ CELLRANGER_RESULTS }}'\n",
+    "cellranger_output_list = {{ CELLRANGER_RESULTS }}\n",
     "output_h5ad = '{{ SCANPY_H5AD }}'\n",
     "temp_dir_path = '/tmp'"
    ]
