fix for ucsc cell browser

--- a/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
@@ -1293,6 +1293,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are adding the louvain clustering to add support for the UCSC cellbrowser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.tl.louvain((adata)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
