--- a/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
@@ -1305,7 +1305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.tl.louvain((adata)"
+    "sc.tl.louvain(adata)"
    ]
   },
   {
