updated template and example notebooks with gene filter option

--- a/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.1.ipynb
@@ -684,6 +684,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we need to filter the cells which doesn't match our thresholds."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -746,6 +753,27 @@
     "print('Number of cells after MT fraction ({0}) filter: {1}'.format(max_mito_pct_threshold,adata.n_obs))\n",
     "\n",
     "print('Total number of cells after filtering: {0}'.format(adata.n_obs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also, we need to filter out any genes that are detected in only less than 20 cells. This operation reduces the dimensions of the matrix by removing zero count genes which are not really informative."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_cell_per_gene_threshold = 20\n",
+    "\n",
+    "print('Total number of genes: {0}'.format(adata.n_vars))\n",
+    "\n",
+    "sc.pp.filter_genes(adata, min_cells=min_cell_per_gene_threshold)\n",
+    "print('Number of genes after cell filter: {0}'.format(adata.n_vars))"
    ]
   },
   {
