--- a/examples/Clustering_3K_PBMCs_v0.0.2.ipynb
+++ b/examples/Clustering_3K_PBMCs_v0.0.2.ipynb
@@ -375,9 +375,9 @@
    "source": [
     "A high fraction of mitochondrial reads being picked up can indicate cell stress, as there is a low proportion of nuclear mRNA in the cell. It should be noted that high mitochondrial RNA fractions can also be biological signals indicating elevated respiration. <p/>\n",
     "\n",
-    "Cell barcodes with high count depth, few detected genes and high fraction of mitochondrial counts may indicate cells whose cytoplasmic mRNA has leaked out due to a broaken membrane and only the mRNA located in the mitochrondia has survived. <p/>\n",
+    "Cell barcodes with high count depth, few detected genes and high fraction of mitochondrial counts may indicate cells whose cytoplasmic mRNA has leaked out due to a broken membrane and only the mRNA located in the mitochondria has survived. <p/>\n",
     "\n",
-    "Cells with high UMI counts and detected genes may represent dublets (it requires further checking)."
+    "Cells with high UMI counts and detected genes may represent doublets (it requires further checking)."
    ]
   },
   {
