--- a/examples/Case-study_Mouse-intestinal-epithelium.ipynb
+++ b/examples/Case-study_Mouse-intestinal-epithelium.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "## Introduction\n",
     "\n",
+    "[![Binder](https://notebooks.gesis.org/binder/badge_logo.svg)](https://notebooks.gesis.org/binder/v2/gh/imperial-genomics-facility/scanpy-notebook-image/v2?urlpath=lab)\n",
     "This notebook uses data set ([GSE92332](https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE92332)) of different regions of the mouse intestinal epithelium from (Haber et al. 2018) and uses codes and documentation from [Best practices in single-cell RNA-seq analysis: a tutorial](https://github.com/theislab/single-cell-tutorial) for data analsis using a variety of tools."
    ]
   },
