--- a/examples/jupyter_basic_usage_v0.0.1.ipynb
+++ b/examples/jupyter_basic_usage_v0.0.1.ipynb
@@ -176,7 +176,7 @@
     "* Its __bold text__\n",
     "* Its _italic text_\n",
     "\n",
-    "## Adding a numerical formula using LaTex\n",
+    "## Adding a numerical formula using LaTeX\n",
     "\n",
     "$$E=MC^2$$"
    ]
