--- a/examples/Clustering_3K_PBMCs_v0.0.3.ipynb
+++ b/examples/Clustering_3K_PBMCs_v0.0.3.ipynb
@@ -87,7 +87,7 @@
     "import plotly.graph_objs as go\n",
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
     "sc.settings.verbosity = 0\n",
-    "sc.logging.print_versions()"
+    "#sc.logging.print_versions()"
    ]
   },
   {
