fix for cell merker file name

--- a/examples/Clustering_3K_PBMCs_v0.0.4.ipynb
+++ b/examples/Clustering_3K_PBMCs_v0.0.4.ipynb
@@ -94,7 +94,7 @@
     "import plotly.graph_objs as go\n",
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
     "sc.settings.verbosity = 0\n",
-    "#sc.logging.print_versions()"
+    "sc.logging.print_header()"
    ]
   },
   {
@@ -1322,7 +1322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_list = '/home/vmuser/coding/test/scanpy_test/julia/outs/PanglaoDB_markers_27_Mar_2020.tsv'"
+    "cell_marker_list = None"
    ]
   },
   {
