added cellbrowser export

--- a/templates/scanpy_single_sample_analysis_v0.0.4.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.4.ipynb
@@ -54,8 +54,9 @@
     "    * [Trajectory analysis](#Trajectory-analysis)\n",
     "      * [Partition-based graph abstraction](#Partition-based-graph-abstraction)\n",
     "    * [Saving scanpy output](#Saving-scanpy-output)\n",
+    "    * [Explore cells for UCSC Cell Browser](#Explore-cells-for-UCSC-Cell-Browser)\n",
     "  * [References](#References)\n",
-    "  * [Acknowledgement](#Acknowledgement)"
+    "  * [Acknowledgement](#Acknowledgement)\n"
    ]
   },
   {
@@ -1744,6 +1745,31 @@
    "outputs": [],
    "source": [
     "adata.write(output_h5ad, compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
+    "\n",
+    "## Explore cells for UCSC Cell Browser\n",
+    "\n",
+    "The UCSC Cell Browser is an interactive browser for single cell data. You can visualize the PCA, t-SNA and UMAP plot of these cells using it. For more details, please check [Cellbrowser docs](https://cellbrowser.readthedocs.io/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cbImportScanpy \\\n",
+    "  -n {{ SAMPLE_IGF_ID }} \\\n",
+    "  -i {{ SCANPY_H5AD }} \\\n",
+    "  -o {{ CELLBROWSER_DIR }} \\\n",
+    "  --clusterField leiden \\\n",
+    "  --htmlDir {{ CELLBROWSER_HTML_DIR }}"
    ]
   },
   {
