--- a/templates/scanpy_single_sample_analysis_v0.0.4.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.4.ipynb
@@ -89,7 +89,9 @@
    "outputs": [],
    "source": [
     "cellranger_output_dir = '{{ CELLRANGER_COUNT_DIR }}'\n",
-    "output_h5ad = '{{ SCANPY_H5AD }}'\n"
+    "output_h5ad = '{{ SCANPY_H5AD }}'\n",
+    "cell_marker_list = '{{ CELL_MARKER_LIST }}'\n",
+    "genome_build = '{{ GENOME_BUILD }}'"
    ]
   },
   {
@@ -126,13 +128,6 @@
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
     "sc.settings.verbosity = 0\n",
     "sc.logging.print_header()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following steps are only required for downloading test data from 10X Genomics's website."
    ]
   },
   {
@@ -1360,15 +1355,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_list = '{{ CELL_MARKER_LIST }}'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df = pd.read_csv(cell_marker_list,delimiter='\\t')"
    ]
   },
@@ -1378,7 +1364,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genome_build = '{{ GENOME_BUILD }}'\n",
     "if genome_build.upper() == 'HG38':\n",
     "  print('Selecting human specific genes')\n",
     "  markers_df = df[(df['species'] == 'Hs') | (df['species'] == 'Mm Hs')]\n",
