--- a/examples/Clustering_3K_PBMCs_v0.0.4.ipynb
+++ b/examples/Clustering_3K_PBMCs_v0.0.4.ipynb
@@ -94,7 +94,8 @@
     "import plotly.graph_objs as go\n",
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
     "sc.settings.verbosity = 0\n",
-    "sc.logging.print_header()"
+    "sc.logging.print_header()\n",
+    "sns.set_theme(context='notebook', style='darkgrid', palette='colorblind')"
    ]
   },
   {
@@ -500,7 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = sns.distplot(adata.obs['n_counts'], kde=False)\n",
+    "ax = sns.histplot(adata.obs['n_counts'], kde=False)\n",
     "ax.set_xlabel(\"Count depth\",fontsize=12)\n",
     "ax.set_ylabel(\"Frequency\",fontsize=12)\n",
     "ax.axvline(1500, 0,1, color='red')"
@@ -521,7 +522,7 @@
    "source": [
     "if (adata.obs['n_counts'].max() - 10000)> 10000:\n",
     "    print('Checking counts above 10K')\n",
-    "    ax = sns.distplot(adata.obs['n_counts'][adata.obs['n_counts']>10000], kde=False, bins=60)\n",
+    "    ax = sns.histplot(adata.obs['n_counts'][adata.obs['n_counts']>10000], kde=False, bins=60)\n",
     "    ax.set_xlabel(\"Count depth\",fontsize=12)\n",
     "    ax.set_ylabel(\"Frequency\",fontsize=12)\n",
     "else:\n",
@@ -536,7 +537,7 @@
    "source": [
     "if adata.obs['n_counts'].max() > 2000:\n",
     "  print('Zooming into first 2000 counts')\n",
-    "  ax = sns.distplot(adata.obs['n_counts'][adata.obs['n_counts']<2000], kde=False, bins=60)\n",
+    "  ax = sns.histplot(adata.obs['n_counts'][adata.obs['n_counts']<2000], kde=False, bins=60)\n",
     "  ax.set_xlabel(\"Count depth\",fontsize=12)\n",
     "  ax.set_ylabel(\"Frequency\",fontsize=12)\n",
     "  ax.axvline(1500, 0,1, color='red')\n",
@@ -559,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = sns.distplot(adata.obs['n_genes'], kde=False)\n",
+    "ax = sns.histplot(adata.obs['n_genes'], kde=False)\n",
     "ax.set_xlabel(\"Number of genes\",fontsize=12)\n",
     "ax.set_ylabel(\"Frequency\",fontsize=12)\n",
     "ax.tick_params(labelsize=12)\n",
@@ -581,7 +582,7 @@
    "source": [
     "if adata.obs['n_genes'].max() > 1000:\n",
     "  print('Zooming into first 1000 gene counts')\n",
-    "  ax = sns.distplot(adata.obs['n_genes'][adata.obs['n_genes']<1000], kde=False,bins=60)\n",
+    "  ax = sns.histplot(adata.obs['n_genes'][adata.obs['n_genes']<1000], kde=False,bins=60)\n",
     "  ax.set_xlabel(\"Number of genes\",fontsize=12)\n",
     "  ax.set_ylabel(\"Frequency\",fontsize=12)\n",
     "  ax.tick_params(labelsize=12)\n",
@@ -614,7 +615,7 @@
    "source": [
     "adata.var['cells_per_gene'] = np.sum(adata.X > 0, 0).T\n",
     "\n",
-    "ax = sns.distplot(adata.var['cells_per_gene'][adata.var['cells_per_gene'] < 100], kde=False, bins=60)\n",
+    "ax = sns.histplot(adata.var['cells_per_gene'][adata.var['cells_per_gene'] < 100], kde=False, bins=60)\n",
     "ax.set_xlabel(\"Number of cells\",fontsize=12)\n",
     "ax.set_ylabel(\"Frequency\",fontsize=12)\n",
     "ax.set_title('Cells per gene', fontsize=12)\n",
@@ -796,7 +797,7 @@
    "outputs": [],
    "source": [
     "plt.rcParams['figure.figsize']=(7,7)\n",
-    "sc.pp.highly_variable_genes(adata, flavor='seurat', min_mean=0.0125, max_mean=3, min_disp=0.5)\n",
+    "sc.pp.highly_variable_genes(adata, flavor='seurat',n_top_genes=2000)\n",
     "seurat_hgv = np.sum(adata.var['highly_variable'])\n",
     "print(\"Counts of HGVs: {0}\".format(seurat_hgv))\n",
     "sc.pl.highly_variable_genes(adata)"
@@ -885,7 +886,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize']=(8,6)\n",
+    "plt.rcParams['figure.figsize']=(10,8)\n",
     "sc.pl.pca(adata,color=['CST3'])"
    ]
   },
@@ -958,7 +959,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.pl.pca(adata,color='leiden')"
+    "cluster_length = len(adata.obs['leiden'].value_counts().to_dict().keys())\n",
+    "cluster_colors = sns.color_palette('colorblind',cluster_length,as_cmap=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.pl.pca(adata,color='leiden',palette=cluster_colors,size=100)"
    ]
   },
   {
@@ -987,7 +998,7 @@
    "source": [
     "leiden_series = deepcopy(adata.obs['leiden'])\n",
     "cell_clusters = list(leiden_series.value_counts().to_dict().keys())\n",
-    "colors = sc.pl.palettes.default_102[0:len(cell_clusters) ]\n",
+    "colors = cluster_colors\n",
     "dict_map = dict(zip(cell_clusters,colors))\n",
     "color_map = leiden_series.map(dict_map).values\n",
     "labels = list(adata.obs.index)\n",
@@ -1041,7 +1052,7 @@
    "outputs": [],
    "source": [
     "plt.rcParams['figure.figsize']=(10,8)\n",
-    "sc.pl.umap(adata, color=['CST3'])"
+    "sc.pl.umap(adata,color=['CST3'],size=100)"
    ]
   },
   {
@@ -1069,7 +1080,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.pl.umap(adata, color=['leiden'],use_raw=False,palette=sc.pl.palettes.default_102)"
+    "sc.pl.umap(adata, color=['leiden'],use_raw=False,palette=cluster_colors,size=100)"
    ]
   },
   {
@@ -1096,7 +1107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.pl.tsne(adata, color=['leiden'],palette=sc.pl.palettes.default_102)"
+    "sc.pl.tsne(adata, color=['leiden'],palette=sc.pl.palettes.default_102,size=100)"
    ]
   },
   {
@@ -1124,7 +1135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.pl.diffmap(adata, color='leiden')"
+    "sc.pl.diffmap(adata,color='leiden',size=100,palette=cluster_colors)"
    ]
   },
   {
@@ -1133,7 +1144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.pl.draw_graph(adata, color='leiden')"
+    "sc.pl.draw_graph(adata,color='leiden',size=100,palette=cluster_colors)"
    ]
   },
   {
@@ -1535,9 +1546,9 @@
     "s_genes_ens = adata.var_names[np.in1d(adata.var_names, s_genes)]\n",
     "g2m_genes_ens = adata.var_names[np.in1d(adata.var_names, g2m_genes)]\n",
     "sc.tl.score_genes_cell_cycle(adata, s_genes=s_genes_ens, g2m_genes=g2m_genes_ens)\n",
-    "sc.pl.umap(adata, color='S_score', use_raw=False)\n",
-    "sc.pl.umap(adata, color='G2M_score', use_raw=False)\n",
-    "sc.pl.umap(adata, color='phase', use_raw=False)"
+    "sc.pl.umap(adata, color='S_score', use_raw=False, size=100 , palette=cluster_colors)\n",
+    "sc.pl.umap(adata, color='G2M_score', use_raw=False, size=100, palette=cluster_colors)\n",
+    "sc.pl.umap(adata, color='phase', use_raw=False, size=100, palette=cluster_colors)"
    ]
   },
   {
@@ -1572,7 +1583,7 @@
    "outputs": [],
    "source": [
     "plt.rcParams['figure.figsize']=(8,8)\n",
-    "sc.pl.paga(adata, color='leiden',cmap=sc.pl.palettes.default_102)"
+    "sc.pl.paga(adata, color='leiden',cmap=cluster_colors)"
    ]
   },
   {
@@ -1581,7 +1592,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.pl.umap(adata, color='leiden', palette=sc.pl.palettes.default_102)"
+    "sc.pl.umap(adata, color='leiden', palette=cluster_colors,size=100)"
    ]
   },
   {
@@ -1591,7 +1602,7 @@
    "outputs": [],
    "source": [
     "sc.tl.draw_graph(adata, init_pos='paga')\n",
-    "sc.pl.draw_graph(adata, color='leiden',palette=sc.pl.palettes.default_102)"
+    "sc.pl.draw_graph(adata, color='leiden',palette=cluster_colors,size=100)"
    ]
   },
   {
@@ -1618,7 +1629,7 @@
    "source": [
     "plt.rcParams['figure.figsize']=(10,10)\n",
     "fig1, ax1 = plt.subplots()\n",
-    "sc.pl.umap(adata, size=50, ax=ax1,show=False)\n",
+    "sc.pl.umap(adata, size=100, ax=ax1,show=False, palette=cluster_colors)\n",
     "sc.pl.paga(adata, pos=adata.uns['paga']['pos'],show=False,  node_size_scale=2, node_size_power=1, ax=ax1, text_kwds={'alpha':5})"
    ]
   },
