--- a/templates/scanpy_single_sample_analysis_v0.0.4.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.4.ipynb
@@ -991,7 +991,10 @@
    "outputs": [],
    "source": [
     "cluster_length = len(adata.obs['leiden'].value_counts().to_dict().keys())\n",
-    "cluster_colors = sns.color_palette('colorblind',cluster_length,as_cmap=True)"
+    "if cluster_length < 20:\n",
+    "  cluster_colors = sns.color_palette('Spectral_r',cluster_length,as_cmap=False).as_hex()\n",
+    "else:\n",
+    "  cluster_colors = sc.pl.palettes.default_102"
    ]
   },
   {
@@ -1000,7 +1003,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.pl.pca(adata,color='leiden'palette=cluster_colors,size=100)"
+    "sc.pl.pca(adata,color='leiden',palette=cluster_colors,size=100)"
    ]
   },
   {
