fix for mouse gene names

--- a/templates/scanpy_single_sample_analysis_v0.0.4.1.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.4.1.ipynb
@@ -1393,6 +1393,8 @@
     "elif genome_build.upper() =='MM10':\n",
     "  print('Selecting mouse specific genes')\n",
     "  markers_df = df[(df['species'] == 'Mm') | (df['species'] == 'Mm Hs')]\n",
+    "  markers_df['official gene symbol'] = \\\n",
+    "    markers_df['official gene symbol'].map(lambda x: x.title())\n",
     "else:\n",
     "  raise ValueError('Species {0} not supported'.format(genome_build))\n",
     "markers_df.shape"
