--- a/examples/Clustering_3K_PBMCs_v0.0.5.ipynb
+++ b/examples/Clustering_3K_PBMCs_v0.0.5.ipynb
@@ -23,11 +23,11 @@
     "  * [Reading data from Cellranger output](#Reading-data-from-Cellranger-output)\n",
     "  * [Data processing and visualization](#Data-processing-and-visualization)\n",
     "    * [Checking highly variable genes](#Checking-highly-variable-genes)\n",
-    "    * [Dublet detection using Scrublet](#Dublet-detection-using-Scrublet)\n",
+    "    * [Doublet detection using Scrublet](#Doublet-detection-using-Scrublet)\n",
     "      * [Plot doublet score histograms for observed transcriptomes and simulated doublets](#Plot-doublet-score-histograms-for-observed-transcriptomes-and-simulated-doublets)\n",
     "    * [Quality control](#Quality-control)\n",
     "      * [Computing metrics for cell QC](#Computing-metrics-for-cell-QC)\n",
-    "      * [Ploting predicted dublets](#Ploting-predicted-dublets)\n",
+    "      * [Ploting predicted doublets](#Ploting-predicted-doublets)\n",
     "      * [Plotting MT gene fractions](#Ploting-MT-gene-fractions)\n",
     "      * [Ploting predicted dublets](#Ploting-predicted-dublets)\n",
     "      * [Count depth distribution](#Count-depth-distribution)\n",
@@ -44,7 +44,7 @@
     "      * [Embed the neighborhood graph using UMAP](#Embed-the-neighborhood-graph-using-UMAP)\n",
     "        * [Plotting 3D UMAP](#Plotting-3D-UMAP)\n",
     "        * [Plotting 2D UMAP](#Plotting-2D-UMAP)\n",
-    "      * [Embed dublets using UMAP](#Embed-dublets-using-UMAP)\n",
+    "      * [Embed doublets using UMAP](#Embed-doublets-using-UMAP)\n",
     "      * [Embed the neighborhood graph using tSNE](#Embed-the-neighborhood-graph-using-tSNE)\n",
     "      * [Embed the neighborhood graph using Diffusion Map and Graph](#Embed-the-neighborhood-graph-using-Diffusion-Map-and-Graph)\n",
     "      * [Embed the neighborhood graph using PHATE](#Embed-the-neighborhood-graph-using-PHATE)\n",
@@ -255,7 +255,7 @@
    "source": [
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
-    "### Dublet detection using Scrublet\n",
+    "### Doublet detection using Scrublet\n",
     "\n",
     "[<b>S</b>ingle-<b>C</b>ell <b>R</b>emover of Do<b>ublet</b>](https://github.com/swolock/scrublet) predicts cell doublets using a nearest-neighbor classifier of observed transcriptomes and simulated doublets."
    ]
@@ -436,7 +436,7 @@
     "\n",
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
-    "#### Ploting predicted dublets"
+    "#### Ploting predicted doublets"
    ]
   },
   {
@@ -1163,7 +1163,7 @@
    "source": [
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
-    "#### Embed dublets using UMAP"
+    "#### Embed doublets using UMAP"
    ]
   },
   {
