--- a/templates/scanpy_single_sample_analysis_v0.0.5.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.5.ipynb
@@ -24,11 +24,11 @@
     "  * [Reading data from Cellranger output](#Reading-data-from-Cellranger-output)\n",
     "  * [Data processing and visualization](#Data-processing-and-visualization)\n",
     "    * [Checking highly variable genes](#Checking-highly-variable-genes)\n",
-    "    * [Dublet detection using Scrublet](#Dublet-detection-using-Scrublet)\n",
+    "    * [Doublet detection using Scrublet](#Doublet-detection-using-Scrublet)\n",
     "      * [Plot doublet score histograms for observed transcriptomes and simulated doublets](#Plot-doublet-score-histograms-for-observed-transcriptomes-and-simulated-doublets)\n",
     "    * [Quality control](#Quality-control)\n",
     "      * [Computing metrics for cell QC](#Computing-metrics-for-cell-QC)\n",
-    "      * [Ploting predicted dublets](#Ploting-predicted-dublets)\n",
+    "      * [Ploting predicted doublets](#Ploting-predicted-doublets)\n",
     "      * [Plotting MT gene fractions](#Ploting-MT-gene-fractions)\n",
     "      * [Count depth distribution](#Count-depth-distribution)\n",
     "      * [Gene count distribution](#Gene-count-distribution)\n",
@@ -44,7 +44,7 @@
     "      * [Embed the neighborhood graph using UMAP](#Embed-the-neighborhood-graph-using-UMAP)\n",
     "        * [Plotting 3D UMAP](#Plotting-3D-UMAP)\n",
     "        * [Plotting 2D UMAP](#Plotting-2D-UMAP)\n",
-    "      * [Embed dublets using UMAP](#Embed-dublets-using-UMAP)\n",
+    "      * [Embed doublets using UMAP](#Embed-doublets-using-UMAP)\n",
     "      * [Embed the neighborhood graph using tSNE](#Embed-the-neighborhood-graph-using-tSNE)\n",
     "      * [Embed the neighborhood graph using Diffusion Map and Graph](#Embed-the-neighborhood-graph-using-Diffusion-Map-and-Graph)\n",
     "      * [Embed the neighborhood graph using PHATE](#Embed-the-neighborhood-graph-using-PHATE)\n",
@@ -246,7 +246,7 @@
    "source": [
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
-    "### Dublet detection using Scrublet\n",
+    "### Doublet detection using Scrublet\n",
     "\n",
     "[<b>S</b>ingle-<b>C</b>ell <b>R</b>emover of Do<b>ublet</b>](https://github.com/swolock/scrublet) predicts cell doublets using a nearest-neighbor classifier of observed transcriptomes and simulated doublets."
    ],
@@ -425,14 +425,14 @@
     "\n",
     "Cell barcodes with high count depth, few detected genes and high fraction of mitochondrial counts may indicate cells whose cytoplasmic mRNA has leaked out due to a broaken membrane and only the mRNA located in the mitochrondia has survived. <p/>\n",
     "\n",
-    "Cells with high UMI counts and detected genes may represent dublets (it requires further checking)."
+    "Cells with high UMI counts and detected genes may represent doublets (it requires further checking)."
    ]
   },
   {
    "source": [
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
-    "#### Ploting predicted dublets"
+    "#### Ploting predicted doublets"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1203,7 +1203,7 @@
    "source": [
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
-    "#### Embed dublets using UMAP"
+    "#### Embed doublets using UMAP"
    ],
    "cell_type": "markdown",
    "metadata": {}
